tests/sksl/errors/ReservedNameExtern.glsl
### Compilation failed:

error: 1: 'extern' is a reserved word
int extern;
    ^^^^^^
1 error
